@@ -26,6 +26,7 @@ if ( empty( $pages ) ) {
 			</th>
 			<td>
 				<input id="service-capacity" type="number" name="service_capacity" value="" min="0" max="<?php echo esc_attr( $number_of_workers ); ?>" />
+                <div id="service-capacity-slider-edit" class="app-ui-slider" data-target-id="service-capacity" data-min="0" data-max="<?php echo esc_attr( $number_of_workers ); ?>"></div>
                 <p class="description"><?php esc_html_e( 'When you set up "Service Capacity" to "0" it will be limited only by the number of available Service Providers.', 'appointments' ); ?></p>
 			</td>
 		</tr>
