@@ -157,3 +157,8 @@ body.appointments_page_app_settings .appointments-settings-tab-working_hours tab
 div.appointments-settings .notice-app-wp-version {
     margin-top: 2em;
 }
+
+.app-ui-slider {
+    margin: 1em 0;
+    max-width: 100px;
+}
