@@ -7,6 +7,7 @@
 - Added an option to force load Appointment's scripts and styles.
 - Improved column "Price".
 - Fixed a problem with service description when Service is not selected.
+- Improved Service "Service Capacity" edit field.
 
 2018-05-31 - 2.3.1
 -------------------------------
